<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="com.example.artem.batteryalarm.MainActivity">
    <TextView
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_warning"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_view_warning_text_size"
        android:text="@string/please_connect_charger"/>
    <TextView
        android:layout_below="@id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_battery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/text_view_battery_text_size"
        android:textColor="@color/colorText"
        android:text="@string/battery_level"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@id/tv_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb_battery"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_below="@id/pb_battery"
        android:id="@+id/tv_battery_level_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/battery_level_alarm"
        android:textSize="@dimen/text_view_battery_level_alarm_text_size"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorText"/>
    <SeekBar
        android:layout_below="@id/tv_battery_level_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sb_battery"
        android:progress="100"
        android:max="100"
        android:layout_marginTop="10dp"/>

    <Switch
        android:layout_below="@id/sb_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:id="@+id/sw_sound"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textColor="@color/colorText"/>

</RelativeLayout>
